--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -39,6 +39,17 @@
 
     <!-- AdminBSB Themes. You can choose a theme from css/themes instead of get all themes -->
     <link href="{% static 'css/themes/all-themes.css' %}" rel="stylesheet" />
+
+    <!-- Bootstrap Material Datetime Picker Css -->
+    <link href="{% static 'plugins/bootstrap-material-datetimepicker/css/bootstrap-material-datetimepicker.css' %}" rel="stylesheet" />
+
+    <!-- Bootstrap DatePicker Css -->
+    <link href="{% static 'plugins/bootstrap-datepicker/css/bootstrap-datepicker.css' %}" rel="stylesheet" />
+
+    <link href="{% static 'plugins/bootstrap-select/css/bootstrap-select.css' %}" rel="stylesheet" />
+
+    <link href="{% static 'plugins/sweetalert/sweetalert.css' %}" rel="stylesheet" />
+
 </head>
 
 <body class="theme-amber">
@@ -79,7 +90,7 @@
             <div class="navbar-header">
                 <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a class="navbar-brand" href="index.html">SISTEMA DE MEDICIÓN DE RESULTADOS DE APRENDIZAJE</a>
+                <a class="navbar-brand" href="{% url 'home' %}">SISTEMA DE MEDICIÓN DE RESULTADOS DE APRENDIZAJE</a>
             </div>
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -315,11 +326,26 @@
                         </a>
                     </li>
                     <li>
-                        <a href="pages/typography.html">
+                        <a href="{% url 'crearRubrica' %}">
                             <i class="material-icons">layers</i>
                             <span>Crea una Rúbrica</span>
                         </a>
                     </li>
+                    {% if usuario.tipo_usuario.nombre == 'Docente' %}
+                    <li>
+                        <a href="{% url 'misCursos' %}">
+                            <i class="material-icons">work</i>
+                            <span>Mis Cursos</span>
+                        </a>
+                    </li>
+                    {% else %}
+                    <li>
+                        <a class="dropdown-item" href="" data-toggle="modal" data-target="#noDocenteModal">
+                            <i class="material-icons">work</i>
+                            <span>Mis Cursos</span>
+                        </a>
+                    </li>
+                    {% endif %}
                     <li>
                         <a href="javascript:void(0);" class="menu-toggle">
                             <i class="material-icons">widgets</i>
@@ -939,6 +965,28 @@
     </div>
   </div>
 
+
+
+  <!-- No Docente Modal-->
+  <div class="modal fade" id="noDocenteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">¡LO SENTIMOS!</h5>
+          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">Usted no es usuario tipo <b><i>'Docente'</i></b>, por lo que, no puede acceder al siguiente módulo</div>
+        <div class="modal-footer">
+          <button class="btn btn-danger" type="button" data-dismiss="modal">Salir</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+    <script src="{% static 'js/pages/ui/dialogs.js' %}"></script>
     <!-- Jquery Core Js -->
     <script src="{% static 'plugins/jquery/jquery.min.js' %}"></script>
 
@@ -977,6 +1025,12 @@
     <!-- Custom Js -->
     <script src="{% static 'js/admin.js' %}"></script>
     <script src="{% static 'js/pages/index.js' %}"></script>
+
+    <script src="{% static 'plugins/sweetalert/sweetalert.min.js' %}"></script>
+
+    <!-- Custom Js -->
+    <script src="{% static 'js/admin.js' %}"></script>
+    <script src="{% static 'js/pages/ui/dialogs.js' %}"></script>
 
     <!-- Demo Js -->
     <script src="{% static 'js/demo.js' %}"></script>
