--- a/templates/Evaluacion/crear_evaluacion.html
+++ b/templates/Evaluacion/crear_evaluacion.html
@@ -53,6 +53,7 @@
                       							<div class="col-sm-10">
                         							<button type="submit" class="btn btn-success">Agregar</button>
                         							<a href="{% url 'detalleCurso' pk %}" class="btn btn-danger" title="Editar información" class="btn btn-success btn-lg btn-sm">Cancelar</a>
+                                                    <a href="{% url 'detalleCurso' pk %}" class="btn btn-warning" title="Editar información" class="btn btn-success btn-lg btn-sm">Regresar</a>
                       							</div>
                     						</div>
               							</form>
