--- a/templates/base/index.html
+++ b/templates/base/index.html
@@ -12,7 +12,7 @@
             <div class="row clearfix">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="card">
-                        <div class="header bg-green">
+                        <div class="header bg-orange">
                             <h2>
                                 Bienvenid@! 
                                             
