--- a/templates/Alumno/misCursosAlumnos.html
+++ b/templates/Alumno/misCursosAlumnos.html
@@ -49,7 +49,7 @@
                                                         <td>
                                                             <center>
                                                                 <a href="{% url 'detalleCursoAlumnos' curso.pk %}" class="btn btn bg-cyan btn-circle waves-effect" title="Ir a Evaluaciones"><i class="material-icons">search</i></a>
-                                                                <a href="" class="btn btn bg-light-green btn-circle waves-effect" title="Descargar mis Notas"><i class="material-icons">cloud_download</i></a>
+                                                                <a disabled="disabled" class="btn btn bg-light-green btn-circle waves-effect" title="En construcción :)"><i class="material-icons">cloud_download</i></a>
                                                             </center>
                                                         </td>
                                     				</tr>
