--- a/templates/Evaluacion/editarEvaluacion.html
+++ b/templates/Evaluacion/editarEvaluacion.html
@@ -39,15 +39,10 @@
                       								<label for="{{form.ponderacion.ponderacion}}">{{form.ponderacion.label}}</label>
                       								{{form.ponderacion}}
                     							</div>
-                                                <div class="col-md-5 mb-4 switch">
-                                                    <b>{{form.is_grupal.label}}</b> <br>
-                                                    <label>NO<input type="checkbox" value={{form.is_grupal}}> 
-                                                        <span class="lever">
-                                                        </span> 
-                                                        SÍ
-                                                    </label>
-                                                    {{form.is_grupal}}
-                                                </div>
+                                  <div class="col-md-3 mb-3 switch">
+                                      <label for="{{form.is_grupal.is_grupal}}">{{form.is_grupal.label}}</label>
+                                        {{form.is_grupal}}
+                                  </div>  
                   							</div>
                   							<div class="form-group row">
                       							<div class="col-sm-10">
